--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "apily-history",
   "version": "0.3.0",
-  "main": "index.js",
+  "main": "build/build.js",
   "dependencies": {},
   "devDependencies": {},
   "description": "History component",
